# iled

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/FHN/: fhn_plotting.py  trainscript.py
iled/: __init__.py
iled/backprop/: ACA_bptt.py
iled/data/: utils.py
iled/misc/: plotting.py  qol.py
iled/networks/: activations.py  autoencoders.py  cnn1d.py  endtoend.py  scalers.py  splitdynamics.py
iled/training/: losslib.py  trainer.py
